feat: criação comp tecnicas

--- a/index.html
+++ b/index.html
@@ -43,6 +43,65 @@
         <h1>Sobre mim</h1>
         <p>Olá, eu sou o Lucas Inácio de Carvalho, tenho 19 anos e sou um programador, apaixonado por tecnologia e história. Amante dos esportes, em busca constante da felicidade.</p>
     </main>
+    <!--Final de sobre mim-->
+
+    <main class="tecnicas">
+        <h1>Competências técnicas</h1>
+        <p>Aqui está algumas linguagens de programação que tenho conhecimento:</p>
+        <ul class="lista-competencias">
+            <li>
+                <img src="java.png" alt="Java">
+            </li>
+            <li>
+                <img src="python.jfif" alt="Python">
+            </li>
+            <li>
+                <img src="csharp.png" alt="C#">
+            </li>
+            <li>
+                <img src="js.png" alt="Java Script">
+            </li>
+            <li>
+                <img src="mysql.png" alt="MySQL">
+            </li>
+            <li>
+                <img src="html.png" alt="HTML 5">
+            </li>
+            <li>
+                <img src="css.png" alt="CSS 3">
+            </li>
+        </ul>
+        <p>Aqui está alguns frameworks que tenho conhecimento:</p>
+        <ul class="lista-competencias">
+            <li>
+                <img src="node.png" alt="Node JS">
+            </li>
+            <li>
+                <img src="type.png" alt="TypeScript">
+            </li>
+            <li>
+                <img src="flask.png" alt="Flask">
+            </li>
+        </ul>
+        <p>Aqui está algumas ferramentas que tenho conhecimento:</p>
+        <ul class="lista-competencias">
+            <li>
+                <img src="ubuntu.png" alt="Ubuntu">
+            </li>
+            <li>
+                <img src="aws.png" alt="AWS">
+            </li>
+            <li>
+                <img src="docker.png" alt="Docker">
+            </li>
+            <li>
+                <img src="git.png" alt="Git">
+            </li>
+            <li>
+                <img src="github.png" alt="GitHub">
+            </li>
+        </ul>
+    </main>
 
     <!--Minhas hards e softskills -->
     <main class="skills">
@@ -86,6 +145,32 @@
     <!--Fim do meu currículo-->
 
     <!--Projetos que desenvolvi -->
+    <main class="projetos">
+        <article>
+            <figure>
+                <img src="buffast.jfif" alt="Projeto desenvolvido por Lucas Inácio">
+            </figure>
+            
+            <aside>
+                <h2>Projeto Tcc ETEC</h2>
+                <p>Projeto desenvolvido por mim e mais dois colegas na qual o tema que escolhemos para desenvolvimento foi o buffast, na qual é um projeto que visa desenvolver um atendimento rápido e evitar o disperdício de bebidas e comidas.</p>
+            </aside>
+        </article>
+    </main>
+
+    <main class="projetos">
+        <article>
+            <figure>
+                <img src="buffast.jfif" alt="Projeto desenvolvido por Lucas Inácio">
+            </figure>
+            
+            <aside>
+                <h2>Projeto API Key-Track</h2>
+                <p>Projeto desenvolvido por mim e pelo meu grupo com objetivo de mostrar ao cliente os filtros de importações e exportações do estado de São Paulo entre 2013-2025.</p>
+            </aside>
+        </article>
+    </main>
+
     <main class="projetos">
         <article>
             <figure>
